--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,48 @@
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Folders in /Extra and everything inside
+Acpi/
+Themes/
+modules/
+Extensions/
+RemovedExtensions/
+removed/
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
+# Shared objects (chameleon plugins)
 *.dylib
 
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+# Compiled ACPI Machine Language files
+*.aml
 
-# Debug files
-*.dSYM/
+#  Vim and OSX parts are from https://www.gitignore.io/api/osx
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
